--- a/discussion.tex
+++ b/discussion.tex
@@ -2,12 +2,21 @@
 
 \chapter{Discussion}\label{ch:discussion}
 
-
-
-
-
 \section{Diachronic part}
 
 First, German only had the d-pronoun and attraction. The pattern of attraction that came with that pronoun is ext only.
 At some point, German invented the wh-pronoun. Helmut showed how it emerged. With that came the other pattern: int only. Some people lost the attraction (but everybody kept the d-pronoun) and with that the pattern disappeared.
 So the patterns in headless relatives follow from the relative pronouns in the language.
+
+\section{D also in Modern German}
+
+Wouldn't we now not expect that Modern German patterns with Old High German wrt attraction in headed constructions. Yes, we would. And yes, this is exactly what we see. Paper by Bader on case attraction.
+
+\section{Why \tsc{fem} does not have \tsc{wh}-pronouns}
+
+\section{Relativization in general}
+
+two features: topic and relativization
+topic = the movement
+relativization = the morpheme
+some languages have both, so it has be at least two features
