--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -38,7 +38,7 @@ From these two proposals follows that it is impossible to have third pattern, wh
 
 
 
-\section{The Modern German pattern}
+\section{The internal wins pattern}
 
 % My claim: the behavior in Modern German headless relatives is a consequence of its \tsc{wh}-morphology.
 
@@ -183,6 +183,23 @@ In sum, even though the relative pronoun in Modern German headless relatives is 
 The second issue with the analysis in X is how to disallow the Modern German pattern for other languages.
 
 In Chapter X I showed that there are also languages that do not show case competition. Polish is an example of a language that only allows for headless relatives when the internal and the external case match (or when the relative pronoun is syncretic for these cases). The language is so-called `strictly matching'.
+
+
+\ex.
+\ag. *Jan ufa kogokolkwiek wpuścil do domu.\\
+Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
+`Jan trusts whoever he let into the house.'
+\bg. *Jan ufa komukolkwiek wpuścil do domu.\\
+Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
+`Jan trusts whoever he let into the house.'
+
+\ex.
+\ag. *Jan lubi kogokolkwiek dokucza.\\
+Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
+`Jan likes whoever he teases.'
+\bg. *Jan lubi komukolkwiek dokucza.\\
+Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
+`Jan likes whoever he teases.'
 
 Consider the Polish and German example below.
 
@@ -379,32 +396,23 @@ Finnish is like German because its light-headed relatives also add some definite
 
 
 
-\section{The Gothic/OHG pattern}
-
-My claim: d-morphology allows for both directions
-
-\subsection{Like Modern German}
-
-d-relative pronoun is also in embedded clause
-same story
-
-\subsection{Derived from light-headed relatives}
+\section{The external wins pattern}
 
 main clause more complex: full double-headed structure, deletion of element in speccp
 
 Why does this not happen in Modern German? no idea..
 
-\subsubsection{Old High German}
+\subsection{Old High German}
 
 has attraction, so it could be derived from deletion under c-command under identity
 
-\subsubsection{Gothic}
+\subsection{Gothic}
 
 does not have attraction
 
 
 
-\section{No third pattern}
+\section{Excluding the third pattern}
 
 
 
@@ -496,6 +504,6 @@ So, this seems to work fine. The assumptions you have to do in order to make thi
 
 That is, I want to connect this behavior of Modern German headless relatives to the shape of its relative pronouns. These pronouns are \tsc{wh}-elements. The OHG and Gothic ones are not \tsc{wh}, they are \tsc{d}. Their relative pronouns look different, and so their headless relatives can also behave differently.
 
-\section{The not attested pattern}
+\section{Summary}
 
 here
