--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -1,7 +1,7 @@
 @book{boretzky1994,
   title={Romani: Grammatik des Kalderaš-Dialektes mit Texten und Glossar},
   author={Boretzky, Norbert},
-  address={Wiesbaden},
+  location={Wiesbaden},
   publisher={Harrassowitz Verlag},
   year={1994}
 }
@@ -20,16 +20,16 @@
 
 @book{nikolaeva1999,
   title = {Ostyak},
-  address = {München},
+  location = {München},
   publisher = {Lincom Europa},
   author = {Nikolaeva, Irina},
   year = {1999}
 }
 
 @phdthesis{himmelreich2017,
-  address = {Leipzig},
+  location = {Leipzig},
   title = {Case Matching Effects in Free Relatives and Parasitic Gaps: {{A}} Study on the Properties of Agree},
-  school = {Universität Leipzig},
+  location = {Universität Leipzig},
   author = {Himmelreich, Anke},
   year = {2017}
 }
@@ -49,11 +49,11 @@
   author={Behaghel, Otto},
   year={1923-1932},
   publisher={Winter},
-  address={Heidelberg}
+  location={Heidelberg}
 }
 
 @incollection{vogel2001,
-  address = {Berlin},
+  location = {Berlin},
   title = {Case Conflict in German Free Relative Constructions: {{An}} Optimality Theoretic Treatment},
   booktitle = {Competition in Syntax},
   publisher = {{Mouton de Gruyter}},
@@ -67,8 +67,8 @@
 @phdthesis{harbert1978,
   title={Gothic syntax: a relational grammar},
   author={Harbert, Wayne Eugene},
-  school = {University of Illinois},
-  address = {Urbana-Champaign},
+  location = {University of Illinois},
+  location = {Urbana-Champaign},
   year={1978}
 }
 
@@ -93,7 +93,7 @@
 }
 
 @incollection{starke2018,
-  address = {Oxford},
+  location = {Oxford},
   title = {Complex Left Branches, Spellout, and Prefixes},
   booktitle = {Exploring Nanosyntax},
   publisher = {{Oxford University Press}},
@@ -146,7 +146,7 @@
   pages = {43--56},
   year = {2004},
   editor = {Vineeta Chand, Ann Kelleher, Angelo J. Rodríguez and Benjamin Schmeiser},
-  address = {Somerville, MA},
+  location = {Somerville, MA},
   publisher = {Cascadilla Press}
 }
 
@@ -170,7 +170,7 @@
 }
 
 @inproceedings{groos1981,
-  address = {Pisa},
+  location = {Pisa},
   title = {Matching Effects in Free Relatives: A Parameter of Core Grammar},
   booktitle = {Theory of Markedness in Generative Grammar},
   publisher = {{Scuola Normale Superiore}},
@@ -194,8 +194,8 @@
   title= {A cross-linguistic approach to the pro-drop parameter},
   author= {Gilligan, Gary Martin},
   year= {1987},
-  school= {University of Southern California},
-  address= {Los Angeles, CA}
+  location= {University of Southern California},
+  location= {Los Angeles, CA}
 }
 
 @misc{moravcsik1978,
@@ -203,7 +203,7 @@
   author={Moravcsik, Edith A.},
   year={1978},
   publisher={Stanford University Press},
-  address = {Stanford},
+  location = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
   pages = {331-374},
@@ -215,7 +215,7 @@
   author={Steel, Susan},
   year={1978},
   publisher={Stanford University Press},
-  address = {Stanford},
+  location = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
   pages = {585-623},
@@ -226,7 +226,7 @@
   title = {Where's Φ? Agreement as a Post-Syntactic Operation},
   booktitle = {Phi-Theory: Phi Features Across Interfaces and Modules},
   publisher = {Oxford University Press},
-  address = {Oxford},
+  location = {Oxford},
   author = {Bobaljik, Jonathan},
   editor = {Harbour, Daniel and Adger, David and Béjar, Susana},
   year = {2006},
@@ -258,9 +258,9 @@
 }
 
 @phdthesis{caha2009,
-  address = {Tromsø},
+  location = {Tromsø},
   title = {The Nanosyntax of Case},
-  school = {University of Tromsø},
+  location = {University of Tromsø},
   author = {Caha, Pavel},
   year = {2009}
 }
@@ -270,7 +270,7 @@
   author={Baerman, Matthew and Brown, Dunstan and Corbett, Greville G},
   year={2002},
   institute = {University of Surrey},
-  address = {Surrey},
+  location = {Surrey},
   doi = {10.15126/SMG.10/1}
 }
 
@@ -279,14 +279,14 @@
   author={Baerman, Matthew and Brown, Dunstan and Corbett, Greville G},
   year={2005},
   publisher={Cambridge University Press},
-  address = {Cambridge}
+  location = {Cambridge}
 }
 
-@mathesis{zompi2017,
+@mastersthesis{zompi2017,
   title={Case decomposition meets dependent-case theories},
   author={Zompì, Stanislao},
   institute = {Universita de Pisa},
-  school={Pisa},
+  location={Pisa},
   year={2017}
 }
 
@@ -353,11 +353,11 @@
   author={Lockwood, William Burley},
   year={1977},
   publisher={Føroya Skúlabókagrunnur},
-  address={Torshavn}
+  location={Torshavn}
 }
 
 @inproceedings{daskalaki2011,
-  address = {Philadelphia},
+  location = {Philadelphia},
   title = {Case Mis-Matching as Kase Stranding},
   volume = {17},
   booktitle = {University of {{Pennsylvania Working Papers}} in {{Linguistics}}},
@@ -369,7 +369,7 @@
 }
 
 @book{bobaljik2012,
-  address = {Cambridge, MA},
+  location = {Cambridge},
   title = {Universals In Comparative Morphology},
   publisher = {MIT Press},
   author = {Bobaljik, Jonathan},
@@ -388,7 +388,7 @@
   doi={10.5334/gjgl.821}
 }
 
-@article{caha2010,
+@incollection{caha2010,
   title={The parameters of case marking and spell out driven movement},
   author={Caha, Pavel},
   journal={Linguistic variation yearbook},
@@ -396,7 +396,9 @@
   number={1},
   pages={32--77},
   year={2010},
-  publisher={John Benjamins},
+  publisher={John Benjamins Publishing Company},
+  editor = {{van Craenenbroeck}, Jeroen},
+  location = {Amsterdam/Philadelphia},
   doi={10.1075/livy.10.02cah}
 }
 
@@ -407,7 +409,7 @@
   pages={57--63},
   year={1991},
   institute={Polish Academy of Sciences},
-  address={Warszaw}
+  location={Warszaw}
 }
 
 @article{caha2013,
@@ -449,45 +451,44 @@
   year={2014}
 }
 
-%%not checked for doi anymore
-
 @incollection{grimm1866,
   title={Über einige Fälle der Attraction},
   author={Grimm, Jacob},
   year={1866},
   booktitle={Kleinere Schriften III. Abhandlungen zur Literatur und Grammatik},
   adress={Berlin},
-  editor={Jacob  Grimm},
+  editor={Jacob Grimm},
   pages={312--348},
   publisher={Dümmler}
 }
 
-
 @book{cinqueforthcoming,
-  address = {Cambridge},
+  location = {Cambridge},
   title = {The Syntax of Relative Clauses: A Unified Double-headed Analysis},
   publisher = {Cambridge University Press},
   author = {Cinque, Guglielmo},
-  year = {forthcoming}
+  year = {2020},
+  doi = {10.1017%2F9781108856195}
 }
-
 
 @book{wiland2019,
   title={The spell-out algorithm and lexicalization patterns: Slavic verbs and complementizers},
   author={Wiland, Bartosz},
   year={2019},
   publisher = {Language Science Press},
-  address = {Berlin}
+  location = {Berlin}
 }
 
-@article{harbert1992,
+@incollection{harbert1992,
   title={Gothic relative clauses and syntactic theory},
   author={Harbert, Wayne},
-  journal={On Germanic linguistics: Issues and methods},
+  book={On Germanic linguistics: Issues and methods},
   pages={109--146},
   year={1992},
   publisher={Mouton de Gruyter},
-  address={Berlin}
+  location={Berlin},
+  doi={10.1515/9783110856446.109},
+  editor={Rauch, Irmengard and Carr, Gerald F. and Kyes, Robert L.}
 }
 
 @incollection{caha2020,
@@ -497,23 +498,34 @@
   booktitle = {The Cambridge handbook of Distributed Morphology},
   editor = {Alexiadou, Artemis and Kramer, Ruth and Marantz, Alec and Massuet, Isabel-Oltra},
   publisher = {Cambridge University Press},
-  address={Cambridge}
+  location={Cambridge}
 }
 
-@article{marantz2000,
+@incollection{marantz2000,
   title={Case and licensing},
   author={Marantz, Alec},
   journal={Arguments and case: Explaining Burzio’s generalization},
   pages={11--30},
-  year={2000}
+  year={2000},
+  editor = {Reuland, Eric J.},
+  publisher = {John Benjamins Publishing Company},
+  volume = {34},
+  location = {Amsterdam/Philadelphia},
+  doi = {10.1075/la.34.04mar}
 }
+
+
+[Linguistik Aktuell/Linguistics Today 34] 2000
+► pp. 11–30
 
 @book{dixon1972,
   title = {The Dyirbal language of north Queensland},
   author = {Dixon, Robert Malcolm Ward},
   volume = {9},
   year = {1972},
-  publisher = {CUP Archive}
+  publisher = {Cambridge University Press},
+  location = {Cambridge},
+  doi = {10.1017/cbo9781139084987}
 }
 
 @article{cinque2005,
@@ -524,14 +536,38 @@
   number={3},
   pages={315--332},
   year={2005},
-  publisher={MIT Press}
+  doi={10.1162/0024389054396917}
 }
 
 @incollection{kakarikos2014,
   title={Case Attraction in Free Relative Clauses of Ancient Greek: A Study of the Syntax--Morphology Interface},
   author={Kakarikos, Konstantinos},
-  booktitle={Major Trends in Theoretical and Applied Linguistics 1},
+  booktitle={Major Trends in Theoretical and Applied Linguistics},
   pages={289--304},
   year={2014},
-  publisher={Sciendo Migration}
+  publisher={De Gruyter},
+  doi={10.2478/9788376560762.p35},
+  location={Berlin, Boston},
+  volume={1}
+}
+
+@article{krause2016,
+  title={ANNIS3: A new architecture for generic corpus query and visualization},
+  author={Krause, Thomas and Zeldes, Amir},
+  journal={Digital Scholarship in the Humanities},
+  volume={31},
+  number={1},
+  pages={118--139},
+  year={2016},
+  doi={10.1093/llc/fqu057}
+}
+
+@article{harbert1983,
+  title={A note on Old English free relatives},
+  author={Harbert, Wayne},
+  journal={Linguistic inquiry},
+  volume={14},
+  number={3},
+  pages={549--553},
+  year={1983}
 }
