--- a/introduction.tex
+++ b/introduction.tex
@@ -12,7 +12,7 @@ This dissertation is about case competition, a situation in which two cases are 
 In this introduction I first introduce what I mean exactly with case competition in headless relatives. Then I introduce the topics I discuss in this dissertation.
 
 
-\section{Introducing the title}
+\section{Decomposing the title}
 
 % First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
@@ -116,19 +116,27 @@ For both I will show that morphology is leading. What we observe in syntax is a 
 
 Case attraction in headed relatives seems related, but I will not account for it.
 
---give example of attraction, both directions--
+\exg. unde ne wolden níet besên den mort den dô was geschên\\
+ and not wanted not see the murder.\ac{acc} that.\ac{acc} there had happened\\
+ `and they didn't want to see the murder that had happened.' \flushfill{MHG, \ac{nib} 1391,14, \pgcitealt{behaghel1923}{756}, after \pgcitealt{pittner1995}{198}}
+
+ \exg. Den schilt den er {vür bôt} der wart schiere zeslagen\\
+ the.\tsc{acc} shield.\tsc{acc} which.\tsc{acc} he held\scsub{acc}, that.\tsc{nom} was quickly shattered\scsub{nom}\\
+ `The shield he held was quickly shattered' \label{ex:iaheaded}\hfill Iwein 6722f., Lenerz 1984: 116)
 
 OHG has case attraction in headed relatives, Gothic does not, but both show case competition in headless relatives. So, there does not seem to be a one-to-one connection there. I leave it for further research.
 
 \subsection{Syncretism}
 
-For a long time it has been noted that syncretism seems to resolve case conflicts.
+For a long time it has been noted that syncretism seems to resolve case conflicts. --references--
 
 A language like Polish, that normally doesn't allow for any case mismatches, even allows for it. In this dissertation I do not offer a detailed account for what a derivation looks like.
 
 \exg. Jan unika kogokolwiek wczoraj obraził.\\
 Jan avoid.\tsc{3sg}\scsub{[gen]} \tsc{rel}.\tsc{acc/gen}.\ac{sg}.\ac{m} yesterday offend.\tsc{3sg}.\tsc{past}\scsub{[acc]}.\\
 `Jan avoided whoever he offended yesterday.'
+
+I won't talk about the details.
 
 \subsection{The genitive}\label{sec:genitive}
 
@@ -157,5 +165,7 @@ hierarchies for each language individually. Gothic syncretisms: acc-dat, acc-nom
 then the predictions would be..
 
 The genitive differs from the other cases in a particular way. That is, nominative, accusative and dative are dependents of the verb (or prepositions). Genitives can be dependents of verbs, or they can be dependents of nouns, as possessors or partitives. Consider the example in \ref{ex:gothic-gen-acc}. The genitive relative pronoun \tit{þiz(e)} `what.\tsc{gen}' is a dependent of the noun \tit{waiht} `thing'. Most of the examples in headless relatives contain genitives that depend on nouns and not those that depend on verbs. The (genitive) possessor is also placed far away from the other three cases in \posscitet{keenan1977} relativization hiearchy.
+
+more: in middle high german only the genitive shows case attraction in headed relatives. again, it is different from the others.
 
 I leave it for future research..
