--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -12,7 +12,7 @@ Then I show that this pattern is not unique to headless relatives. It appears in
 \section{In headless relatives}\label{sec:pattern-rels}
 
 As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
-In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. In Chapter \ref{ch:conclusion} I briefly return to the issue.
+In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. In Chapter \ref{ch:discussion} I briefly return to the issue.
 }
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
@@ -125,7 +125,7 @@ To sum up, case competition in headless relative is subject to the case scale, r
 
 If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern, Middle High and Old High German, \citealt{grosu2003} for Ancient Greek and \citealt{daskalaki2011} for Modern Greek).\footnote{
 Some of these languages differ from Gothic in that they are subject to an additional constraint. That is, they not allow both the internal or the external case to win case competitions. If the other case is more to the right on the case scale \ref{ex:case-scale-rep}, the result is ungrammatical. Modern German is an example of a language that only allows the internal case to win the case competition. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
-This topic is the main focus of Part \ref{part:direction} of this dissertation.}
+This topic is the main focus of Part \ref{part:variation} of this dissertation.}
 
 In the remainder of this chapter I show that headless relatives are not the only place where the case scale appears. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
 
@@ -587,7 +587,7 @@ Crucially, to the best of my knowledge, there is no language in which the nomina
 
 \begin{table}[ht]
   \center
-  \caption {}
+  \caption {Syncretisms}
     \input{tables/syncretism-nom-acc-dat.tex}
   \label{tbl:syncretisms}
 \end{table}
