--- a/thesis.tex
+++ b/thesis.tex
@@ -47,8 +47,8 @@
 \include{excluding-the-third-pattern}
 
 \part{Going into detail}\label{part:details}
-\include{going-into-detail}
-\include{stuff}
+\include{decomposing-relative-pronouns}
+\include{deletion}
 
 \bookmarksetup{startatroot}
 \include{discussion}
@@ -66,6 +66,7 @@
 
 \newrefcontext[sorting=nyt]
 \printbibliography
+% \bibliography{references.bib} % for natbib
 
 %%%%
 
