--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -2,7 +2,7 @@
 
 \chapter{Two attested patterns}
 
-In Part X of this dissertation, I discussed a first aspect of case competition in headless relatives. When there is case competition, reference is always made to the same case scale: there is a fixed order that determines which case wins. The same case scale is used crosslinguistically.
+In Part \ref{part:case-facts} of this dissertation, I discussed a first aspect of case competition in headless relatives. When there is case competition, reference is always made to the same case scale: there is a fixed order that determines which case wins. The same case scale is used crosslinguistically.
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-two-patterns}
 
@@ -12,9 +12,9 @@ However, there is a second aspect to headless relatives, which differs across la
 In this stage, I do not discuss languages that do not allow internal or external case to win the case competition, because they do not show case competition. In Section X I come back to this kind of language.
 }
 
-The first possibility is that a language allows both the internal and the external case to win the competition. In this type of language, any two cases can be the internal and external case, and the case more to the right on the case scale surfaces.
-The second possibility is that a language allows the internal case to win the case competition, but it does not allow the external case to. In this type of language, only the internal case gets to surface if it is more to the right on the case scale. If the external case is more to the right on the case scale, it does not surface. In fact, there is no grammatical result possible.
-The third possibility is that a language allows the external case to win the case competition, but it does not allow the internal case to. In this type of language, only the external case gets to surface if it is more to the right on the case scale. If the internal case is more to the right on the case scale, it does not surface, and no grammatical result is possible.
+The first possibility is that a language allows both the internal and the external case to win the competition. In this type of language, any two cases can be the internal and external case, and the more complex case surfaces.
+The second possibility is that a language allows the internal case to win the case competition, but it does not allow the external case to. In this type of language, only the internal case gets to surface if it is complex. If the external case is more complex, it does not surface. In fact, there is no grammatical result possible.
+The third possibility is that a language allows the external case to win the case competition, but it does not allow the internal case to. In this type of language, only the external case gets to surface if it is complex. If the internal case is complex, it does not surface, and no grammatical result is possible.
 
 In this chapter I show that two of these three patterns are attested crosslinguistically. The first pattern, in which both internal and external case can win, is the one already exemplified by Gothic. I show that there is another language that shows the same pattern: Old High German. The second pattern, in which only the internal case wins, is exemplified by Modern German. There is no language in which only the external case wins the case competition. A summary of the patterns is given in Table \ref{tbl:competition-summary}.
 
@@ -31,10 +31,6 @@ In this chapter I show that two of these three patterns are attested crosslingui
   \bottomrule
 \end{tabular}\label{tbl:competition-summary}
 \end{table}
-
-After I discuss the possible languages that show case competition, I briefly turn to some that do not.
-For instance, Polish is an example of a language that only allows for headless relatives in which the two cases are identical (or the phonological form that corresponds to the two cases is identical).
-Two other examples are Old English and Greek, which always let their relative pronoun appear in the external case, no matter the internal case.
 
 
 \section{Internal or external wins}
@@ -61,9 +57,7 @@ As discussed in Chapter \ref{ch:recurring}, Gothic is a language in case competi
 % <http://www.wulfila.be>
 % } The glossing comes from the detailed tagging on that same website. The translations are my own.
 
-Old High German shows the same pattern as Gothic. The relative pronoun can surface in the internal or the external case, depending on which case is more to the right on the case scale. This conclusion follows from my own research of the texts Der althochdeutsche Isidor, The Monsee fragments, Otfrid's Evangelienbuch and Tatian in ANNIS3.\footnote{
-https://korpling.german.hu-berlin.de/annis3/
-} The examples below follow the spelling and the detailed glosses in ANNIS3. The translations are my own.
+A language that shows the same pattern as Gothic is Old High German. The relative pronoun can surface in the internal or the external case, depending on which case is more complex. This conclusion follows from my own research of the texts Der althochdeutsche Isidor, The Monsee fragments, Otfrid's Evangelienbuch and Tatian in ANNIS \citep{krause2016}. The examples below follow the spelling and the detailed glosses in ANNIS. The translations are my own.
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative.
 
@@ -183,7 +177,7 @@ To summarize
     \label{tbl:summary-old-high-german}
 \end{table}
 
-In sum, Gothic and Old High German allow both the internal and the external case to surface, as long as they adhere to the case scale.
+In sum, Gothic and Old High German both allow the internal or the external case to surface, as long as it is the most complex case.
 
 \section{Only internal case wins}
 
@@ -203,7 +197,7 @@ The example adheres to the case cale, but the more complex case (here the accusa
 I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
 `I invite who I like.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
 
-Changing the case of the relative pronoun to the nominative still gives an ungrammatical result, as illustrated in \ref{ex:mg-acc-nom-u}. This in addition violates the case scale.
+Changing the case of the relative pronoun to the nominative still gives an ungrammatical result, as illustrated in \ref{ex:mg-acc-nom-u}. This in addition violates the case scale: nominative is less a less complex case than accusative.
 
 \exg. *Ich {lade ein}, wer \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
 I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{nom}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
@@ -218,7 +212,7 @@ The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the inte
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
 
-Changing the case of the relative pronoun to the nominative gives an ungrammatical result, as illustrated in \ref{ex:mg-nom-acc-u}. This violates the case scale.
+Changing the case of the relative pronoun to the nominative gives an ungrammatical result, as illustrated in \ref{ex:mg-nom-acc-u}. This violates the case scale: nominative is less a less complex case than accusative.
 
 \exg. *Uns besucht \tbf{wer} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
@@ -236,7 +230,7 @@ The example adheres to the case cale, but the more complex case (here the dative
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock.\ac{acc} like.3\ac{sg}\scsub{[nom]}\\
 `I trust who likes Hitchcock.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
 
-Changing the case of the relative pronoun to the nominative still gives an ungrammatical result, as illustrated in \ref{ex:mg-dat-nom-u}. This in addition violates the case scale.
+Changing the case of the relative pronoun to the nominative still gives an ungrammatical result, as illustrated in \ref{ex:mg-dat-nom-u}. This in addition violates the case scale: nominative is less a less complex case than dative.
 
 \exg. *Ich vertraue, wer \tbf{Hitchcock} \tbf{mag}.\\
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{nom}.\tsc{an} Hitchcock.\ac{acc} like.3\ac{sg}\scsub{[nom]}\\
@@ -251,7 +245,7 @@ The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the inte
 we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria.\ac{nom} trust.3\ac{sg}\scsub{[dat]}\\
 `Who visits us, Maria trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
 
-Changing the case of the relative pronoun to the nominative gives an ungrammatical result, as illustrated in \ref{ex:mg-nom-dat-u}. This violates the case scale.
+Changing the case of the relative pronoun to the nominative gives an ungrammatical result, as illustrated in \ref{ex:mg-nom-dat-u}. This violates the case scale: nominative is less a less complex case than dative.
 
 \exg. *Uns besucht \tbf{wer} \tbf{Maria} \tbf{vertraut}.\\
 we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} trust.3\ac{sg}\scsub{[dat]}\\
@@ -269,7 +263,7 @@ The example adheres to the case scale, but the more complex case (here the dativ
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
 `I trust whoever Maria also likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
 
-Changing the case of the relative pronoun to the accusative still gives an ungrammatical result, as illustrated in \ref{ex:mg-dat-acc-u}. This in addition violates the case scale.
+Changing the case of the relative pronoun to the accusative still gives an ungrammatical result, as illustrated in \ref{ex:mg-dat-acc-u}. This in addition violates the case scale: accusative is less a less complex case than dative.
 
 \exg. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
@@ -284,7 +278,7 @@ The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the inte
 I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
 `I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
-Changing the case of the relative pronoun to the accusative gives an ungrammatical result, as illustrated in \ref{ex:mg-acc-dat-u}. This violates the case scale.
+Changing the case of the relative pronoun to the accusative gives an ungrammatical result, as illustrated in \ref{ex:mg-acc-dat-u}. This violates the case scale: accusative is less a less complex case than dative.
 
 \exg. *Ich {lade ein} \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
@@ -309,7 +303,7 @@ To summarize
           &
           \\ \cmidrule{1-4}
       [\ac{acc}]
-          & \ac{acc}
+          & \ac{acc}/(\ac{nom})
           &
           &
           \\ \cmidrule{1-4}
@@ -326,9 +320,9 @@ In sum, Modern German has two requirements for case competition in its headless 
 
 \section{No only external case wins}
 
-A third possibility logically exists. However, so the best of my knowledge, this pattern is not attested in any (past) natural language. It has been said about Greek, but I think this lanugage doesn't adhere to the case sacle. I give examples in the next section.
+Logically, a third possibility exists. However, so the best of my knowledge, this pattern is not attested in any (former) natural language.
 
-It has also been said about Old Greek (cf. in \citealt{cinque2005}) (see a lot of examples here \citealt{kakarikos2014}), but here is an example of why that's not the case:. Although they seem to be more rare, there are also example in which the internal case surfaces.
+It has been said about Old Greek (cf. in \citealt{cinque2005}, who stated the same about Gothic) (see a lot of examples here \citealt{kakarikos2014}), but here is an example of why that's not the case:. Although they seem to be more rare, there are also example in which the internal case surfaces.
 
 Consider..
 \tit{philéō} `to love' takes accusative, \tit{apothnḗiskō} `to die'
@@ -337,44 +331,7 @@ Consider..
 \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} the god.\tsc{pl} love.3\tsc{pl} die.3\tsc{sg} young\\
 `He whom the gods love dies young.' (Menander, The Double  Deceiver, fragment 125)
 
-It is of course impossible to prove the non-existence of anything, so it could be an accident, but I am going to set up an system in which this does not exist.
-
-
-
-\section{Patterns without case competition}
-
-Not all languages adhere to this case hierarchy. Here is discuss a few: some that
-
-What does not exist: external only
-
-\subsection{No mismatch allowed}
-
-pro-drop
-
-
-
-\ex.
-\ag. *Jan ufa kogokolkwiek wpuścil do domu.\\
-Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
-`Jan trusts whoever he let into the house.'
-\bg. *Jan ufa komukolkwiek wpuścil do domu.\\
-Jan trust.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} let.\tsc{3sg}\scsub{acc} to home\\
-`Jan trusts whoever he let into the house.'
-
-\ex.
-\ag. *Jan lubi kogokolkwiek dokucza.\\
-Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
-`Jan likes whoever he teases.'
-\bg. *Jan lubi komukolkwiek dokucza.\\
-Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} tease.\tsc{3sg}\scsub{dat}\\
-`Jan likes whoever he teases.'
-
-
-
-\subsection{External case surfaces}
-
-
-\subsubsection{Greek}
+Two other languages come close, but these languages adhere to the case scale.
 
 Dasalaki: `no case competition'
 
@@ -388,11 +345,7 @@ met.1\tsc{sg}\scsub{acc} \tsc{rel}.\tsc{gen}.\tsc{sg}.\tsc{m} gave.3\tsc{pl}\scs
 met.1\tsc{sg}\scsub{acc} who.\tsc{acc.sg} \tsc{cl.3sg.gen} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
 `I met whoever they gave the scholarship to.'
 
-
-
-\subsubsection{Old English}
-
-Harbert
+bladiebla \citep{harbert1983}
 
 old english: matrix clause decides, going against case competition
 
@@ -400,16 +353,14 @@ old english: matrix clause decides, going against case competition
 
 \exg. he tobryst ðone \tbf{ðe} \tbf{he} \tbf{onuppan} \tbf{fylð}\\
  it pulverizes\scsub{[acc]} \tsc{rel}.\ac{acc} \tsc{compl} it upon\scsub{[dat]} falls\\
-`It pulverizes him whom it falls upon.' adapted from St.Mat. 1249 after xx
+`It pulverizes him whom it falls upon.' \flushfill{Old English, adapted from \pgcitealt{harbert1983}{550}}\label{ex:old-english}
+
+ adapted from St.Mat. 1249 after xx  550
+
+It is of course impossible to prove the non-existence of anything, so it could be an accident, but I am going to set up an system in which this does not exist.
 
 %old english looks pretty similar to gothic here. Both have a complementizer, both have a relative pronoun preceding it. what I'll say later is that the old english complementizer also can also spell out case features and the gothic one cannot.
-
-\subsection{No internal case surfaces}
-
-What I have not seen is a language in which the relative pronoun appears in the internal case, and it does not care about the case hierarchy. So, the external case always needs to be taken into account.
 
 \section{Summary}
 
 Case competition: two patterns. Gothic and Old High German allow both directions, Modern German only allows the internal case to surface. To the best of my knowledge, there are no languages in which only the external case can surface.
-
-There exist also languages without case competition. There we see some in which the relative pronoun takes the external case (Old English, Modern Greek) and some that don't allow for mismatches at all (Polish). To the best of my knowledge, there are no languages that do not care about the case hierarchy and take the internal case, leaving the external case for what it is.
