--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -40,6 +40,8 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 
 %%%%REFERENCES%%%
 \usepackage[backend=biber,style=authoryear-comp,natbib=true,dashed=false,sorting=ynt]{biblatex}
+% \usepackage{natbib}
+% \bibliographystyle{linquiry2}
 \newcommand{\posscitet}[1]{\citeauthor{#1}'s (\citeyear{#1})}
 \newcommand{\posscitealt}[1]{\citeauthor{#1}'s \citeyear{#1}}
 \newcommand{\possciteauthor}[1]{\citeauthor{#1}'s}
@@ -51,6 +53,8 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 \newcommand{\seccitep}[2]{(\citealt{#1}:~$\S$#2)}
 \newcommand{\pgcitet}[2]{\citeauthor{#1} (\citeyear{#1}:~#2)}
 \newcommand{\seccitet}[2]{\citeauthor{#1} (\citeyear{#1}:~$\S$#2)}
+\urlstyle{sf} %no strange font for doi urls
+\newcommand{\doi}[1]{doi: \url{#1}}
 %%%%REFERENCES%%%
 
 
@@ -82,7 +86,7 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 %%%depth up to subsections also in toc%%%
 \mainmatter
 \setcounter{secnumdepth}{4}
-\setcounter{tocdepth}{2}
+\setcounter{tocdepth}{3}
 \usepackage{bookmark}%links etc
 %%%%%TABLE OF CONTENTS%%%
 
